Fixes issues with text alignment

--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -136,9 +136,9 @@ textarea {
   background: none;
   border: 1px solid whitesmoke;
   border-radius: 10px;
-  text-wrap: wrap;
   resize: none;
   line-height: 1.5rem;
+  letter-spacing: -0.025rem;
 }
 
 h2 {
